--- a/ex026/mq002/mediastyles/style.css
+++ b/ex026/mq002/mediastyles/style.css
@@ -1,3 +1,21 @@
 @charset "UTF-8";
 
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
 /* Configurações gerais */
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color:#233eff;
+    color: white;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    padding: 0.5em;
+}
