--- a/ex026/mq003/styles/style.css
+++ b/ex026/mq003/styles/style.css
@@ -27,7 +27,7 @@ body {
 }
 main {
     
-    width: 80vw;  
+    width: 70vw;  
     background-color: rgba(240, 248, 255, 0.801);
     margin: auto;
     border-radius: 10px;
@@ -43,9 +43,11 @@ main h1 {
 
 main img {
     display: none;
-}
-
-main img#phone {
-    display: block;
     margin: auto;
 }
+
+main img#phone {display: block;}
+main img#tablet {display: none;}
+main img#desk {display: none;}
+main img#tv {display: none;}
+main img#print {display: none;}
