--- a/ex026/mq003/styles/style.css
+++ b/ex026/mq003/styles/style.css
@@ -2,6 +2,7 @@
 
 /* -------Versão Mobile First------ */
 
+
 * {
     margin: 0;
     padding: 0;
@@ -9,6 +10,12 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
+
+
+
+
+
+
 
 html {
     
@@ -27,7 +34,7 @@ body {
 }
 main {
     
-    width: 70vw;  
+   max-width: 400px;  
     background-color: rgba(240, 248, 255, 0.801);
     margin: auto;
     border-radius: 10px;
